first working version of whole auth process
Signed-off-by: brunopecampos <brunopecampos@protonmail.com>

--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -3,12 +3,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #504DA6;
+    padding: 10%;
 }
 
 .login-container {
     width: 30%;
+    align-items: center;
 }
 
 .login-input {
